[project]
name = "trash"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "sax", email = "s.apostolico@gmail.com"},
]
dependencies = []
requires-python = ">3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
name = "trash"
version = "0.32.0"
description = "description"
readme = "README.md"
authors = ["sax <s.apostolico@gmail.com>"]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "tox",
    "pytest>=8.2.1",
    "pytest-coverage>=0.0",
    "bump2version>=1.0.1",
    "black>=24.4.2",
    "isort>=5.13.2",
    "flake8>=7.0.0",
    "bandit>=1.7.8",
]

[tool.pdm.build]
includes = []
[tool.poetry.dependencies]
python = "*"
